# AI-Powered-GCP-Synthesizer

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml
Cloud Run Website/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
Cloud Run Website/.streamlit/: config.toml
Cloud Run Website/pages/: 1_Digest.py
Cloud Run Website/release_agent/: __init__.py  agent.py  config.py  feedback.py  health.py  sources.py  theme.py  ui.py
Cloud Run Website/sql/: create_feedback_table.sql
sql/: 01_create_release_notes_table.sql  02_refresh_table_and_export.sql  03_clean_dataset  gcp_daily-release-notes-refresh.sql
